bootnode_statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: bootnode-service
  labels:
    app: bootnode
spec:
  ports:
  - port: 30301
    name: discovery
  clusterIP: 10.96.0.100
  selector:
    app: bootnode
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bootnode-set
spec:
  selector:
    matchLabels:
      app: bootnode # has to match .spec.template.metadata.labels
  serviceName: "bootnode-service"
  replicas: 1
  template:
    metadata:
      labels:
        app: bootnode # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      volumes:
      - name: qdata-0
        persistentVolumeClaim:
          claimName: bootnode-pv-claim
      containers:
      - name: bootnode
        image: jpmorganchase/quorum:latest
        imagePullPolicy: IfNotPresent
        command: ["/bin/sh"]
        args: ["-c", "bootnode -nodekey /qdata/nodekey"]
        ports:
        - containerPort: 30301
          name: discovery
        volumeMounts:
        - name: qdata-0
          mountPath: /qdata
