node_statefulsets.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
  labels:
    app: node
spec:
  ports:
  - port: 8545
    name: port1
  - port: 8546
    name: port2
  clusterIP: 10.96.0.99
  selector:
    app: node
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: node-set-1
spec:
  selector:
    matchLabels:
      app: node # has to match .spec.template.metadata.labels
  serviceName: "node-service"
  replicas: 1
  template:
    metadata:
      labels:
        app: node # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      volumes:
      - name: qdata-1
        persistentVolumeClaim:
          claimName: node-1-pv-claim
      containers:
      - name: quorum
        image: jpmorganchase/quorum:latest
        imagePullPolicy: IfNotPresent
        command: ["/bin/sh"]
        args: ["-c", "start.sh --bootnode=\"enode://2802d659859f0304d210f4e0163d65bc192523b1a4cc92686fa69da6eb4b80052f39ca6071d2ca84b29cba598f5afb9396f47c5f20653567395fc0facbed9f46@10.96.0.100:30301\" --raftInit  --networkid 2018"]
        ports:
        - containerPort: 8545
          name: port1
        - containerPort: 8546
          name: port2
        volumeMounts:
        - name: qdata-1
          mountPath: /qdata
      - name: constellation
        image: jpmorganchase/constellation:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: qdata-1
          mountPath: /qdata
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: node-set-2
spec:
  selector:
    matchLabels:
      app: node # has to match .spec.template.metadata.labels
  serviceName: "node-service"
  replicas: 1
  template:
    metadata:
      labels:
        app: node # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      volumes:
       - name: qdata-2
         persistentVolumeClaim:
           claimName: node-2-pv-claim
      containers:
      - name: quorum
        image: jpmorganchase/quorum:latest
        imagePullPolicy: IfNotPresent
        command: ["/bin/sh"]
        args: ["-c", "start.sh --bootnode=\"enode://2802d659859f0304d210f4e0163d65bc192523b1a4cc92686fa69da6eb4b80052f39ca6071d2ca84b29cba598f5afb9396f47c5f20653567395fc0facbed9f46@10.96.0.100:30301\" --raftInit  --networkid 2018"]
        ports:
        - containerPort: 8545
          name: port1
        - containerPort: 8546
          name: port2
        volumeMounts:
        - name: qdata-2
          mountPath: /qdata
      - name: constellation
        image: jpmorganchase/constellation:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: qdata-2
          mountPath: /qdata
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: node-set-3
spec:
  selector:
    matchLabels:
      app: node # has to match .spec.template.metadata.labels
  serviceName: "node-service"
  replicas: 1
  template:
    metadata:
      labels:
        app: node # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      volumes:
      - name: qdata-3
        persistentVolumeClaim:
          claimName: node-3-pv-claim
      containers:
      - name: quorum
        image: jpmorganchase/quorum:latest
        imagePullPolicy: IfNotPresent
        command: ["/bin/sh"]
        args: ["-c", "start.sh --bootnode=\"enode://2802d659859f0304d210f4e0163d65bc192523b1a4cc92686fa69da6eb4b80052f39ca6071d2ca84b29cba598f5afb9396f47c5f20653567395fc0facbed9f46@10.96.0.100:30301\" --raftInit  --networkid 2018"]
        ports:
        - containerPort: 8545
          name: port1
        - containerPort: 8546
          name: port2
        volumeMounts:
        - name: qdata-3
          mountPath: /qdata
      - name: constellation
        image: jpmorganchase/constellation:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: qdata-3
          mountPath: /qdata
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: node-set-4
spec:
  selector:
    matchLabels:
      app: node # has to match .spec.template.metadata.labels
  serviceName: "node-service"
  replicas: 1
  template:
    metadata:
      labels:
        app: node # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      volumes:
      - name: qdata-4
        persistentVolumeClaim:
          claimName: node-4-pv-claim
      containers:
      - name: quorum
        image: jpmorganchase/quorum:latest
        imagePullPolicy: IfNotPresent
        command: ["/bin/sh"]
        args: ["-c", "start.sh --bootnode=\"enode://2802d659859f0304d210f4e0163d65bc192523b1a4cc92686fa69da6eb4b80052f39ca6071d2ca84b29cba598f5afb9396f47c5f20653567395fc0facbed9f46@10.96.0.100:30301\" --raftInit  --networkid 2018"]
        ports:
        - containerPort: 8545
          name: port1
        - containerPort: 8546
          name: port2
        volumeMounts:
        - name: qdata-4
          mountPath: /qdata
      - name: constellation
        image: jpmorganchase/constellation:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: qdata-4
          mountPath: /qdata
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: node-set-5
spec:
  selector:
    matchLabels:
      app: node # has to match .spec.template.metadata.labels
  serviceName: "node-service"
  replicas: 1
  template:
    metadata:
      labels:
        app: node # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      volumes:
      - name: qdata-5
        persistentVolumeClaim:
          claimName: node-5-pv-claim
      containers:
      - name: quorum
        image: jpmorganchase/quorum:latest
        imagePullPolicy: IfNotPresent
        command: ["/bin/sh"]
        args: ["-c", "start.sh --bootnode=\"enode://2802d659859f0304d210f4e0163d65bc192523b1a4cc92686fa69da6eb4b80052f39ca6071d2ca84b29cba598f5afb9396f47c5f20653567395fc0facbed9f46@10.96.0.100:30301\" --raftInit  --networkid 2018"]
        ports:
        - containerPort: 8545
          name: port1
        - containerPort: 8546
          name: port2
        volumeMounts:
        - name: qdata-5
          mountPath: /qdata
      - name: constellation
        image: jpmorganchase/constellation:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: qdata-5
          mountPath: /qdata
