racecourse_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: racecourse-service
  labels:
    app: racecourse
spec:
  selector:
    app: racecourse
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: racecourse-deployment
spec:
  selector:
    matchLabels:
      app: racecourse
  replicas: 1
  template:
    metadata:
      labels:
        app: racecourse
    spec:
      containers:
      - name: racecourse
        image: test/racecourse:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
