racecourse_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: racecourse-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.org/websocket-services: "racecourse-service"
spec:
  backend:
    serviceName: racecourse-service
    servicePort: 3000
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: racecourse-service
          servicePort: 3000
